# Crew-AI-Deep_research

./: README.md  page_text.txt  pyproject.toml
output/: OpenAI_analysis.md
src/my_first_crew/: crew.py  custom_llm.py  main.py  server.py
src/my_first_crew/config/: agents.yaml  tasks.yaml
src/my_first_crew/tools/: custom_tool.py  scrape_page.py  tool.py
src/my_first_crew/web/: index.html
